# VESPER_CUDA

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yml  fileio.py  fitter.py  main.py  map.py  pymol_vec.py  pyproject.toml  ruff.toml
examples/: 8orj_stage_1.cif  vesper_struc_map.py
src/vesper/: api.py  cli.py  fitter.py
src/vesper/data/: io.py  map.py
src/vesper/utils/: pdb2ss.py  pdb2vol.py  rmsd.py  segmap.py  unify.py  utils.py
ssutils/: pdb2ss.py
utils/: fileio.py  pdb2ss.py  pdb2vol.py  rmsd.py  segmap.py  unify.py  utils.py
